--- a/gb/20/6/23/n12205400.md
+++ b/gb/20/6/23/n12205400.md
@@ -1,22 +1,22 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/dzedc2565/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/dzedc2565/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/dzedc2565/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/dzedc2565/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/dzedc2565/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/dzedc2565/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/dzedc2565/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/dzedc2565/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/dzedc2565/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/dzedc2565/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/dzedc2565/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/dzedc2565/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/dzedc2565/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/dzedc2565/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/dzedc2565/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/dzedc2565/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/dzedc2565/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/dzedc2565/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/dzedc2565/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/dzedc2565/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/dzedc2565/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/dzedc2565/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/dzedc2565/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/dzedc2565/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/dzedc2565/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/dzedc2565/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/dzedc2565/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/dzedc2565/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/dzedc2565/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/dzedc2565/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/dzedc2565/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/dzedc2565/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/dzedc2565/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/dzedc2565/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/dzedc2565/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/dzedc2565/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/dzedc2565/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/dzedc2565/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/dzedc2565/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/dzedc2565/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/dzedc2565/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/dzedc2565/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/dzedc2565/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/dzedc2565/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/dzedc2565/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/dzedc2565/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/dzedc2565/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hoxgwd311/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>维州新法：克扣工资为犯罪 雇主或坐牢</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2019/08/GettyImages-496048324-600x400.jpg" />
 <h6>上周，维州安德鲁斯（Daniel Andrews）政府在议会中依靠中立议员的支持，通过了将克扣工资定为刑事犯罪的立法。（Michael Dodge/Getty Images）
 </h6>
 <hr>
-<p>【大纪元2020年06月23日讯】（大纪元记者宋清宁澳洲<ahref="https://github.com/dzedc2565/djy/blob/master/gb/tag/%E5%A2%A8%E5%B0%94%E6%9C%AC.md#1">墨尔本</a>编译报导）近日，维州通过立法，将故意克扣薪资定为<ahref="https://github.com/dzedc2565/djy/blob/master/gb/tag/%E5%88%91%E4%BA%8B%E7%8A%AF%E7%BD%AA.md#1">刑事犯罪</a>行为。同时，维州还对集体诉讼法进行了一项重大改革，使起诉短付<ahref="https://github.com/dzedc2565/djy/blob/master/gb/tag/%E5%B7%A5%E8%B5%84.md#1">工资</a>或损害消费者的大公司变得更加容易。</p>
-<p>上周，维州安德鲁斯（Daniel Andrews）政府在议会中依靠中立议员的支持，通过了将克扣<ahref="https://github.com/dzedc2565/djy/blob/master/gb/tag/%E5%B7%A5%E8%B5%84.md#1">工资</a>定为<ahref="https://github.com/dzedc2565/djy/blob/master/gb/tag/%E5%88%91%E4%BA%8B%E7%8A%AF%E7%BD%AA.md#1">刑事犯罪</a>的立法。维州联盟党反对该立法，<ahref="https://github.com/dzedc2565/djy/blob/master/gb/tag/%E9%9B%87%E4%B8%BB.md#1">雇主</a>和联邦政府也警告说，维州的做法可能违反宪法，并且令人困惑。</p>
-<p>根据新法，违法企业面临最高近一百万澳元的罚款，违法<ahref="https://github.com/dzedc2565/djy/blob/master/gb/tag/%E9%9B%87%E4%B8%BB.md#1">雇主</a>面临最高10年的监禁。</p>
+<p>【大纪元2020年06月23日讯】（大纪元记者宋清宁澳洲<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%A2%A8%E5%B0%94%E6%9C%AC.md#1">墨尔本</a>编译报导）近日，维州通过立法，将故意克扣薪资定为<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%88%91%E4%BA%8B%E7%8A%AF%E7%BD%AA.md#1">刑事犯罪</a>行为。同时，维州还对集体诉讼法进行了一项重大改革，使起诉短付<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%B7%A5%E8%B5%84.md#1">工资</a>或损害消费者的大公司变得更加容易。</p>
+<p>上周，维州安德鲁斯（Daniel Andrews）政府在议会中依靠中立议员的支持，通过了将克扣<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%B7%A5%E8%B5%84.md#1">工资</a>定为<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%88%91%E4%BA%8B%E7%8A%AF%E7%BD%AA.md#1">刑事犯罪</a>的立法。维州联盟党反对该立法，<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E9%9B%87%E4%B8%BB.md#1">雇主</a>和联邦政府也警告说，维州的做法可能违反宪法，并且令人困惑。</p>
+<p>根据新法，违法企业面临最高近一百万澳元的罚款，违法<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E9%9B%87%E4%B8%BB.md#1">雇主</a>面临最高10年的监禁。</p>
 <p>新法要到2021年年中才会生效，目的是给企业时间做好准备，但雇主团体担心新法与联邦系统发生了重叠。</p>
 <p>联邦的公平工作调查专员署（Fair Work Ombudsman）已经在监管同一领域，只是处罚中不包括监禁。</p>
 <p>莫里森政府正在制定法律将扣薪定为犯罪，并暗示维州的立法可能会面临宪法挑战。</p>
 <p>澳洲律政部长波特（Christian Porter）说：“安德鲁斯政府完全没有必要急着完成这一考虑不周的事项。”</p>
-<p><ahref="https://github.com/dzedc2565/djy/blob/master/gb/tag/%E5%A2%A8%E5%B0%94%E6%9C%AC.md#1">墨尔本</a>大学劳动法专家豪（John Howe）教授对《时代报》说，如今想要自我报告短付工资的维州雇主可能被迫同时应对维州和联邦的机构。</p>
+<p><ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%A2%A8%E5%B0%94%E6%9C%AC.md#1">墨尔本</a>大学劳动法专家豪（John Howe）教授对《时代报》说，如今想要自我报告短付工资的维州雇主可能被迫同时应对维州和联邦的机构。</p>
 <p>澳洲小生意组织理事会（COSBOA）首席执行官斯特朗（Peter Strong）说，人们被多次起诉构成了“真正的风险”。</p>
-<p>他表示，在联邦一级对性质最严重的<ahref="https://github.com/dzedc2565/djy/blob/master/gb/tag/%E5%85%8B%E6%89%A3%E5%B7%A5%E8%B5%84.md#1">克扣工资</a>案进行刑事处罚是更明智的做法。</p>
-<p>他说：“那些真正<ahref="https://github.com/dzedc2565/djy/blob/master/gb/tag/%E5%85%8B%E6%89%A3%E5%B7%A5%E8%B5%84.md#1">克扣工资</a>的人败坏了我们的名声，做了错事，应该去处罚他们。”</p>
+<p>他表示，在联邦一级对性质最严重的<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%85%8B%E6%89%A3%E5%B7%A5%E8%B5%84.md#1">克扣工资</a>案进行刑事处罚是更明智的做法。</p>
+<p>他说：“那些真正<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%85%8B%E6%89%A3%E5%B7%A5%E8%B5%84.md#1">克扣工资</a>的人败坏了我们的名声，做了错事，应该去处罚他们。”</p>
 <p>上周，维州议会还通过了备受争议的法律，对集体诉讼法进行修改，允许处理集体诉讼的律师收取胜诉酬金，使他们能从诉讼和解金中分得一杯羹。</p>
 <p>胜诉酬金被指可以增加人们诉诸司法的机会，因为该体制迫使律师在原告败诉时承担费用。</p>
 <p>澳洲最大的诉讼融资公司Omni Bridgeway反对胜诉酬金，称这使律师既担任出资人又担任法律顾问。</p>
@@ -27,42 +27,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/dzedc2565/djy/blob/master/gb/20/5/26/n12136801.md#1">维州失业率上升 政府高管获加薪</a></li>
-<li><a href="https://github.com/dzedc2565/djy/blob/master/gb/20/6/2/n12154798.md#1">墨尔本天府餐厅短付工资 遭罚20余万</a></li>
-<li><a href="https://github.com/dzedc2565/djy/blob/master/gb/20/6/2/n12156581.md#1">标普：维州财政状况差 信用评级受威胁</a></li>
-<li><a href="https://github.com/dzedc2565/djy/blob/master/gb/20/6/15/n12186016.md#1">暴力胁迫雇员做奴工 墨尔本餐馆老板面临近十年刑期</a></li>
-<li><a href="https://github.com/dzedc2565/djy/blob/master/gb/20/6/23/n12205385.md#1">维州政府欲再建吸毒室 与墨尔本市府协商选址</a></li>
-<li><a href="https://github.com/dzedc2565/djy/blob/master/gb/20/6/22/n12203793.md#1">澳维州确诊病例反常激增 陷“一带疫路”</a></li>
-<li><a href="https://github.com/dzedc2565/djy/blob/master/gb/20/6/22/n12203165.md#1">受中共病毒影响 墨尔本丹德农秀被迫取消</a></li>
-<li><a href="https://github.com/dzedc2565/djy/blob/master/gb/20/6/22/n12203150.md#1">墨尔本一市府安装停车感应器 花销巨大引争议</a></li>
-<li><a href="https://github.com/dzedc2565/djy/blob/master/gb/20/6/22/n12203134.md#1">新西兰青年陈尸维州围场 女性熟人涉嫌谋杀遭指控</a></li>
-<li><a href="https://github.com/dzedc2565/djy/blob/master/gb/20/6/22/n12203112.md#1">墨尔本家庭出国按规隔离 获准外出趁机逃跑被追回</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/5/26/n12136801.md#1">维州失业率上升 政府高管获加薪</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/6/2/n12154798.md#1">墨尔本天府餐厅短付工资 遭罚20余万</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/6/2/n12156581.md#1">标普：维州财政状况差 信用评级受威胁</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/6/15/n12186016.md#1">暴力胁迫雇员做奴工 墨尔本餐馆老板面临近十年刑期</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/20/n13741352.md#1">Woolworths将以2.43亿收购在线平台MyDeal</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/20/n13741323.md#1">7月起 澳洲小型家庭电费一年或增近200元</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/20/n13741321.md#1">上海封城导致造影剂短缺 澳部分手术被迫推迟</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/20/n13741175.md#1">澳房价涨速是薪水近7倍 年底或有改善</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/20/n13741132.md#1">澳航首次推出“先买后付”机票预订服务</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741100.md#1">博士山4条巴士线路将增加班次</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/4/n11088075.md#1" target="_blank">野狐一禅：刻我心碑上的右派精英</a></li><li><a href="https://github.com/dzedc2565/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/22/n10869347.md#1" target="_blank">感恩节 法轮大法弟子感念师恩</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/6/n9929355.md#1" target="_blank">尹曙生：触目惊心的杀人运动</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/8/22/n9555520.md#1" target="_blank">为什么绝症有时可以不医而愈？</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/dzedc2565/djy/blob/master/gb/20/6/20/n12200556.md#1">中印边境冲突后 中共四大异常举动的背后</a></li>
-<li><a href="https://github.com/dzedc2565/djy/blob/master/gb/20/6/21/n12201563.md#1">大暴雨将持续5天 大陆十多省市面临威胁</a></li>
-<li><a href="https://github.com/dzedc2565/djy/blob/master/gb/20/6/21/n12201603.md#1">最希望哪一国的观光客优先回流？日本民调：台湾</a></li>
-<li><a href="https://github.com/dzedc2565/djy/blob/master/gb/20/6/21/n12202590.md#1">美国越来越多年轻人染上中共病毒</a></li>
-<li><a href="https://github.com/dzedc2565/djy/blob/master/gb/20/6/21/n12201515.md#1">三峡库区水位持续上涨 已超防洪水位2米</a></li>
-<li><a href="https://github.com/dzedc2565/djy/blob/master/gb/20/6/22/n12203481.md#1">余苑绮癌末动完肝手术 分享女儿跳舞疗愈影片</a></li>
-<li><a href="https://github.com/dzedc2565/djy/blob/master/gb/20/6/21/n12202305.md#1">带子女为汪峰庆父亲节 章子怡搞笑写三大诉求</a></li>
-<li><a href="https://github.com/dzedc2565/djy/blob/master/gb/20/6/21/n12202190.md#1">刘诗诗哭了怎么办？吴奇隆别样回答超宠妻</a></li>
-<li><a href="https://github.com/dzedc2565/djy/blob/master/gb/20/6/21/n12202465.md#1">港片商被逼签禁言加辣合约 前港姐发文表心声</a></li>
-<li><a href="https://github.com/dzedc2565/djy/blob/master/gb/20/6/20/n12200081.md#1">李瑞镇做客《一日三餐》 一登场就当大爷唠叨</a></li>
-<li><a href="https://github.com/dzedc2565/djy/blob/master/gb/20/6/20/n12199965.md#1">观日食占卜文化   省视当今中国会出大事吗？</a></li>
-<li><a href="https://github.com/dzedc2565/djy/blob/master/gb/20/6/19/n12198822.md#1">43岁身心亮红灯 跑步让他甩掉压力、走出困境</a></li>
-<li><a href="https://github.com/dzedc2565/djy/blob/master/gb/20/5/22/n12130110.md#1">【康熙大帝】从三阿哥到康熙帝（上）</a></li>
-<li><a href="https://github.com/dzedc2565/djy/blob/master/gb/20/6/5/n12162914.md#1">【命理】为什么夏天出生的命还会喜木火？</a></li>
-<li><a href="https://github.com/dzedc2565/djy/blob/master/gb/20/5/23/n12131411.md#1">【馨香雅句】一本简单的书 为何被广泛流传？（一）</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/4/20/n13716382.md#1">【百年真相】打抱不平的侠女 为何被枪杀取肾？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/15/n13737123.md#1">一曲《梅花》为何总让人禁不住热泪盈眶</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738009.md#1">【未解之谜】动物的超能力</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/13/n13734962.md#1">【未解之谜】霍皮预言“大净化” 毁灭与希望同在？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/4/n13726629.md#1">【命相漫谈】怎么说“财多如何不发财？”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741045.md#1">【神韵早期节目】唐玄宗游月宫（2013年制作）</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741053.md#1">【财商天下】大陆消费和信贷塌方 失业率创新高</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13740913.md#1">【时事军事】俄军与M777第一次对话 就尝到滋味</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740226.md#1">紧跟中共的大V遭封杀 对五毛粉红造成冲击</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739710.md#1">大陆两卫健委官员批清零政策  被指不寻常</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740103.md#1">传广西销毁捧习“口袋书” 相关报导已全删</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739984.md#1">介绍田中老家 任贤齐吃喝不花钱 自嘲像恶霸</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739409.md#1">刘嘉玲为学霸侄子庆生 亿万身家未来或留给对方</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739664.md#1">赵小侨怀孕30周报喜 晒孕照“想得更多祝福 ”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740144.md#1">被问会否与周润发再合作 钟楚红：一定不拒绝</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739444.md#1">陈晓旭去世15周年 薛宝钗扮演者张莉贴照缅怀</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739418.md#1">癌细胞没它会饿死？1个防癌绝佳方法 人人能做到</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739808.md#1">搭飞机如何穿衣服比较好？ 空服员分享经验</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/13/n13735397.md#1">心脏衰竭比癌症更致命！年轻也出现 3症状要警惕</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/11/n13733128.md#1">睡醒有眼屎不是坏事！但眼屎过多小心3大警讯</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738702.md#1">【健康1+1】新冠、疫苗刺突蛋白 2大方法解毒</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/dzedc2565/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/dzedc2565/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/6/23/n12205400.htm">维州新法：克扣工资为犯罪 雇主或坐牢</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/6/23/n12205400.htm">维州新法：克扣工资为犯罪 雇主或坐牢</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/dzedc2565/djy/blob/master/gb/20/6/23/n12205400.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/dzedc2565/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dzedc2565/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/dzedc2565/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/dzedc2565/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/dzedc2565/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dzedc2565/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/dzedc2565/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dzedc2565/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/dzedc2565/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dzedc2565/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/dzedc2565/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dzedc2565/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/dzedc2565/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dzedc2565/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/dzedc2565/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dzedc2565/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/dzedc2565/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dzedc2565/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/dzedc2565/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dzedc2565/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/dzedc2565/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dzedc2565/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/dzedc2565/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dzedc2565/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/dzedc2565/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dzedc2565/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/dzedc2565/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dzedc2565/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/dzedc2565/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dzedc2565/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/dzedc2565/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dzedc2565/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/dzedc2565/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dzedc2565/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/dzedc2565/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dzedc2565/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/dzedc2565/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dzedc2565/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/dzedc2565/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dzedc2565/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/dzedc2565/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dzedc2565/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/dzedc2565/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dzedc2565/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/dzedc2565/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dzedc2565/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/dzedc2565/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dzedc2565/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hoxgwd311/djy/blob/master/gb/20/6/23/n12205400.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
